@@ -986,3 +986,4 @@ Added a Module Config option to have only one spamassassin process run at a time
 S3 backups to date-based filenames are now supported, and can be properly purged.
 ---- Changes since 3.62 ----
 Updated the TWiki script installer to version 4.2.3, TikiWiki to 2.1, Xoops to 2.3.0, and phpMyAdmin to 2.11.9.2.
+Added the --source parameter to list-available-scripts.pl, and include script source in full output.
